# Diary

./: .WiilSocietyWithLowBirthratesFaceACrisisInTheFuture.txt.swp  .travis.yml  20220614  20220615  Readme.md  new.txt  pyproject.toml  text.txt
.github/workflows/: github_action.yml  test_software.yml
2022/05/10/: black_flake8.md  travis_ci.md
2022/05/14/: main.py
script/: Agent.py  Camera.py  EstimationAgent.py  IdealCamera.py  IdealRobot.py  Landmark.py  Mcl.py  Particle.py  Robot.py  cross_entropy_error.py  identity_function.py  load_.py  load_mnist.py  map.py  neural_test.py  neuralnet_mnist.py  perceptron.py  pli.py  run.py  run_2.py  run_3.py  run_4.py  run_5.py  s.md  softmax.py  test.py  test_animation.py  testa.py  wall.py  world.py
script/test/: test_MCL.py
test/: test.py  test_MCL.py  test_functions.py  test_textbook.py
