[tool.poetry]
name = "DeepLearning_1"
version = "1.0.0"
description = ""
authors = ["JunKubota"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
